@@ -1,3 +1,8 @@
+2013-10-27  Corinna Vinschen  <corinna@vinschen.de>
+
+	* exception.h: Fold in content of include/exceptions.h.
+	* include/exceptions.h: Remove.
+
 2013-10-26  Corinna Vinschen  <corinna@vinschen.de>
 
 	* devices.in (dev_storage): Map /dev/dsp to \Device\Null.
